fix: Option description has sufficient color contrast in dark mode

--- a/src/internal/components/option/constants.scss
+++ b/src/internal/components/option/constants.scss
@@ -7,3 +7,4 @@
 @use '../../styles/tokens' as awsui;
 
 $tags-description-color: awsui.$color-text-dropdown-item-secondary;
+$tags-description-color-hover: awsui.$color-text-dropdown-item-secondary-hover;
